# computechain

./: .gitignore  CHANGELOG_SINCE_RESTRUCTURE.md  CONCEPT.md  DEVELOPMENT_LOG.md  LICENSE  QUICK_START.md  README.md  README_ru.md  ROADMAP.md  TEST_GUIDE.md  VALIDATOR_PERFORMANCE_GUIDE.md  cleanup.sh  cpc-cli  dashboard.html  open_dashboard.sh  problems.md  pyproject.toml  requirements.txt  run_tests.sh  start_node_a.sh  start_node_b.sh  start_test.sh
blockchain/cli/: node_cli.py
blockchain/consensus/: block_validator.py  engine.py  proposer.py
blockchain/core/: accounts.py  chain.py  events.py  mempool.py  miner_rewards.py  rewards.py  state.py  tx_receipt.py  zk_verification.py
blockchain/observability/: __init__.py  metrics.py
blockchain/p2p/: node.py  protocol.py
blockchain/rpc/: api.py
blockchain/snapshot/: __init__.py  snapshot_manager.py  types.py
blockchain/storage/: db.py
blockchain/tests/: README.md  dump.sh  test_core.py
blockchain/upgrade/: __init__.py  manager.py  migrations.py  types.py
cli/: main.py
computechain/cli/: keystore.py
computechain/docs/: ComputeChain_MVP_Guide.md  ComputeChain_Security_Audit.md  ComputeChain_Technical_Specification.md  ComputeChain_Whitepaper.md  For_Granny.md
docs/: GPU_Security_Research.md
investigation/logs_20251223_063504/: metrics_20251218_042914.csv  metrics_20251218_043218.csv  metrics_20251218_044029.csv  (+5 more)
scripts/: e2e_battle.py  generate_genesis.py
tests/: e2e_battle.py  test_block_signature.py  test_core.py  test_economic_invariants.py  test_new_features_e2e.py  test_tx_lifecycle.py
(+235 files in other folders)
