[tool.poetry]
name = "computechain"
version = "0.1.0"
description = "ComputeChain Node & Protocol"
authors = ["ComputeChain Team"]

[tool.poetry.dependencies]
python = "^3.11"
ecdsa = "^0.18.0"
bech32 = "^1.2.0"
pydantic = "^2.5.0"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
msgpack = "^1.0.7"
pycryptodome = "^3.20.0"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

